--soft fix still needs some work for lower res (overflow in searchbox) --rephrase syntax

--- a/resources/frontend/css/phone/main.css
+++ b/resources/frontend/css/phone/main.css
@@ -110,6 +110,7 @@ container {
     padding-bottom: 20px;
     color: var(--text-color);
     font-family: "Poppins", sans-serif;
+    overflow: hidden;
 }
 
 .header {
@@ -121,6 +122,7 @@ container {
     align-items: center;
     background-color: var(--bg-shade-mid);
     border: solid var(--global-border-size) var(--global-border-color);
+
 }
 
 .header .left,
@@ -135,25 +137,31 @@ container {
 }
 
 .header .center {
-    height: 100%;
+    height: calc(100% + 20px);
+    max-width: 70%;
     flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     white-space: nowrap;
+
 }
 
 .header .center .search-container {
     position: relative;
     min-width: 100px;
+    display: flex;
+    align-items: center;
     width: 80%;
+    max-width: 80%;
     height: 30px;
+    flex-shrink: 1; 
 }
+
 
 .header .icon-container {
     font-family: 'Material Icons Outlined';
     position: relative;
-    display: inline-block;
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -215,6 +223,12 @@ container {
     line-height: 1.4;
     align-items: center;
     display: flex;
+    flex-grow: 1; 
+    min-width: 0; 
+    max-width: 100%; 
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
     width: 100%;
     height: 27px;
     padding-left: 20px;
@@ -267,7 +281,7 @@ container {
     height: 0;
     transition: opacity 0.3s ease, height 0.3s ease;
     overflow: hidden;
-    z-index: 1;
+    z-index: 10;
 }
 
 .header .center .suggestions.show {
